# IMO_grader

./: .env.example  .gitattributes  .gitignore  README.md  generate_data_from_naturalproofs.py  licence.md  lint.sh  naturalproofs_models.py  parse_naturalproofs.py  pyproject.toml  test.sh  test_model_on_imo_grading.py  test_model_on_proof_checking.py  theorem_samples_gpt4_1.json  utils.py
clients/: openai.py
llm/: core.py  openai.py
rft_api/: create_dataset.py  train_samples.json  train_samples.jsonl
rft_api_scripts/: create_grader.py  val_samples.jsonl
test/: fixtures.py  test_utils.py
tinker_code/: .env.example  .gitignore  async_utils.py  async_utils_test.py  get_models.py  gspo.py  imo_grader_training.py  imo_grading_metric.py  imo_verifer_training.py  pyproject.toml  pytest.ini  rloo.py  run_imo_sweep.sh  sft.py  stories_gspo_test.py  stories_sft_test.py  stories_train.py
